Edit: updated layout and styles

--- a/css/media.css
+++ b/css/media.css
@@ -9,5 +9,17 @@
         text-align: center;
         margin-bottom: 50px;
     }
+    .hero{
+        text-align: center;
+    }
+    .hero .row .content a{
+        background-color: var(--main-color);
+        color: white;
+        font-family: var(--sec-font);
+        border-radius: 25px;
+        padding: 10px 20px;
+        font-size: .875rem;
+        transition: all 0.5s;
+}
     
 }
