Edit: updated layout and styles

--- a/css/media.css
+++ b/css/media.css
@@ -18,7 +18,7 @@
         font-family: var(--sec-font);
         border-radius: 25px;
         padding: 10px 20px;
-        font-size: .875rem;
+        font-size: 10px;
         transition: all 0.5s;
 }
     
