--- a/css/media.css
+++ b/css/media.css
@@ -9,6 +9,12 @@
         text-align: center;
         margin-bottom: 50px;
     }
+    footer .row .footer-links{
+        text-align: left;
+    }
+    footer .row .footer-contact{
+        text-align: left;
+    }
     .hero{
         text-align: center;
     }
@@ -18,8 +24,23 @@
         font-family: var(--sec-font);
         border-radius: 25px;
         padding: 10px 20px;
-        font-size: 10px;
+        font-size: 15px;
         transition: all 0.5s;
-}
     
+    }
+    .hero .row .content h1{
+        font-size: 41.6px
+    }
+    .hero .row .image{
+        padding-top: 50px;
+    }
+   
+    .message-sucess h1 {
+        font-size: 20px;
+    }
+      .message-sucess{
+        width: 80%;
+      }
 }
+
+    
